# supportrouter-aws

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sdlc.project.yaml
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: open_question.yml  task.yml
.github/workflows/: ci.yml
data/knowledge_base/: faq-powerdock-001.md  pol-returns-001.md
data/sample/: catalog.json  orders.json  routing_table.json
docs/00_project/: AI_ORCHESTRATOR_BRIEF.md  PRODUCT_BRIEF.md  PROJECT_CHARTER.md
docs/01_architecture/: ARCHITECTURE.md  DATA_MODEL.md
docs/02_testing/: EVAL_STRATEGY.md  TEST_STRATEGY.md
docs/03_operations/: RELEASE_NOTES.md  RUNBOOK.md
evals/: __init__.py  guardrail_harness.py  harness.py  loader.py  prompt_cache.py
evals/datasets/: .gitkeep  v0.1_golden.json  v0.1_guardrails.json  v0.1_retrieval.json
evals/rubrics/: v0.1_judge.json
evals/scorecards/: .gitkeep
infra/: .gitkeep  README.md  app.py  cdk.json  chat_runtime_requirements.txt  requirements.txt
scripts/: generate_synthetic_data.py  reseed.py  teardown.ps1  teardown.sh
tests/: conftest.py  test_api_handler.py  test_classifier.py  test_cli.py  test_decision.py  test_eval_harness.py  test_golden_evals.py  test_graph.py  test_guardrails.py  test_infra_synth.py  test_lambda_tools.py  test_observability.py  test_prompt_cache.py  test_reseed.py  test_retrieval_evals.py  test_retrieve_providers.py  test_router.py  test_tools_local.py  test_ui_sessions.py
tools/: .gitkeep  __init__.py  _shared.py  get_order_status.py  initiate_return.py  issue_refund.py
(+40 files in other folders)
