[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportrouter"
version = "0.1.0"
description = "Eval-driven AI customer support agent for fictional VoltEdge Electronics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "aws-cdk-lib>=2.200.0,<3",
    "constructs>=10.0.0,<11",
]

[project.scripts]
supportrouter = "supportrouter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "infra"]
